Add more styling to personal website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <img src = "https://i.ytimg.com/vi/tQgInNU-9sc/maxresdefault.jpg">
         <h1>Evil Patrick</h1>
         <p>Me shutting down the school computer instead of logging out</p>
+        <a href="https://apple.com">Click Here for a Free iPhone X</a>
     </body>
 </html>
