--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Evil Patrick</h1>
         <p>Me shutting down the school computer instead of logging out</p>
         <a href="https://apple.com">Click Here for a Free iPhone X</a>
+        <a href="https://ybhs.schoolloop.com"><Click Here for your Grades</a>
     </body>
 </html>
